--- a/menu.html
+++ b/menu.html
@@ -1,24 +1,19 @@
 <html>
         <head>
-                <title>MENU</title>
+        <title>Menu</title>
+        <link href="/style.css" rel="stylesheet" >
         </head>
         <body>
-                        <center>
-                        <form action="site/menu.cgi" method="post">
-                        <h1><center>Firewall</center></h1>
-                        <input type="submit" value="REINICIAR" name="f_r">
-                        <input type="submit" value="INICIAR" name="f_i">
-                        <input type="submit" value="PARAR" name="f_p">
-                        <h1><center>DNS</center></h1>
-                        <input type="submit" value="REINICIAR" name="d_r">
-                        <input type="submit" value="INICIAR" name="d_i">
-                        <input type="submit" value="PARAR"name="d_p">
-                        <form action="menu.cgi" method="post">
-                        <h1><center>NAGIOS</center></h1>
-                        <input type="submit" value="REINICIAR" name="n_r">
-                        <input type="submit" value="INICIAR" name="n_i">
-                        <input type="submit" value="PARAR" name="n_p">
-                        </form>
-                        </center>
+                <h1 class="titulo">menu</h1>
+                <br>
+                <form action="/cgi-bin/menu.cgi" method="post">
+                <h2>O que deseja?</h2>
+                <hr/>
+                <input type="submit" name="GE" value="Gerenciar Serviços"><br/>
+                <hr/>
+                <input type="submit" name="AG" value="Agendar Tarefas"><br/>
+                <hr/>
+                <input type="submit" name="PS" value="Processos Iniciados"><br/>
+                </form>
         </body>
 </html>
