--- a/html/agendar.html
+++ b/html/agendar.html
@@ -8,28 +8,28 @@
                 <h1 class="titulo">Agendar Tarefas</h1>
                 <br/>
                 <hr/>
-                <form action="cgi-bin/cron.cgi" method="post">
+                <form action="cron.cgi" method="post">
                         Minuto:<br/>
                         (ex: 0-59)<br/>
-                        <input type="text" name="min"><br/><br/>
+                        <input type="text" name="Min"><br/><br/>
                         Hora:<br/>
                         (ex: 0-23)<br/>
-                        <input type="text" name="hor"><br/><br/>
+                        <input type="text" name="Hor"><br/><br/>
                         Dia do Mês:<br/>
                         (ex: 1-31)<br/>
-                        <input type="text" name="dia"><br/><br/>
+                        <input type="text" name="Dia"><br/><br/>
                         Mês:<br/>
                         (ex: 1-12)<br/>
-                        <input type="text" name="mes"><br/><br/>
+                        <input type="text" name="Mes"><br/><br/>
                         Dia da Semana:<br/>
                         (0-7, 0=Dom, 1=Seg...7=Dom)<br/>
-                        <input type="text" name="sem"><br/><br/>
+                        <input type="text" name="Sem"><br/><br/>
                         Usuario:<br/>
                         (nome do usuario)<br/>
-                        <input type="password" name= "usr"><br/><br/>
+                        <input type="text" name= "Usr"><br/><br/>
                         Comando:<br/>
                         (ex: ping 8.8.8.8)<br/>
-                        <input type="password" name= "cmd"><br/><br/>
+                        <input type="text" name= "Cmd"><br/><br/>
 
                         <input type="submit" value= "Agendar">
                 </form>
