--- a/html/menu.html
+++ b/html/menu.html
@@ -13,7 +13,7 @@
                 <hr/>
                 <input type="submit" name="AG" value="Agendar Tarefas"><br/>
                 <hr/>
-                <input type="submit" name="PS" value="Mostrar Serviços Iniciados"><br/>
+                <input type="submit" name="PS" value="Mostrar Status Dos Serviços Iniciados"><br/>
                 </form>
         </body>
 </html>
